<resources>
    <string name="app_name">MOIM磨唧</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="birth">Birthday</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="info">Information</string>
    <string name="male">Y</string>
    <string name="female">X</string>

    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>

    <string name="logging_in">Logging in...</string>
    <string name="ERROR_INTERNET">Something wrong with the Internet.</string>
    <string name="ERROR_LOGIN">Something wrong when logging in.</string>

    <string name="PERSON_SETTING">Setting</string>

    <string name="set_remark">Set Remark</string>
    <string name="messages">Messages</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>

    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="logout">Sign out</string>

    <string name="forget_password">Forget password?</string>
    <string name="newhere">New here?Sign up</string>

    <string name="again">Again</string>

    <string name="moim_moments">Moim Moments</string>
    <string name="moim_match">Moim Match</string>

    <string name="settings">Settings</string>

    <string name="my_id">My MOIM ID:</string>

    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="say_something">Say something...</string>
    <string name="share_to">Share to</string>

    <string name="moments">Moments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancle</string>

    <string name="my_profile">My Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="moim_id">MoIM ID</string>
    <string name="more">More</string>

    <string name="add_contacts">Add Contacts</string>
    <string name="search_id">Search MoIM ID</string>

    <string name="add">Add</string>
    <string name="send_success">Send successfully</string>

    <string name="new_friends">New Friends</string>

</resources>
