<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/rl_myprofile_photo"
        android:clickable="true"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="@string/profile_photo"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/head"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_myprofile_head" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@color/white"
        android:id="@+id/rl_myprofile_name"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="@string/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/name"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_myprofile_name" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:id="@+id/rl_myprofile_id"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="@string/moim_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@string/moim_id"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_myprofile_id" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/rl_myprofile_more"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:text="@string/more"/>
    </RelativeLayout>
</LinearLayout>