<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context="com.jammy.mchsclient.activity.PublishMomentActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:clickable="true"
        >
        <EditText
            style="?android:attr/textViewStyle"
            android:id="@+id/et_moment"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/say_something"
            android:gravity="top"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/addpic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/circle_location"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:background="@color/white">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/global_share"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_to"
            android:textSize="15dp"/>
    </LinearLayout>
</LinearLayout>
