<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.jammy.mchsclient.activity.AddContactsActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_reg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_add_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="Search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:text="@string/search_id"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <RelativeLayout
        android:id="@+id/rl_search_user"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white">
        <ImageView
            android:layout_margin="15dp"
            android:id="@+id/iv_search_head"
            android:src="@drawable/head"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <Button
            android:id="@+id/btn_add_user"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/add"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>
        <LinearLayout
            android:layout_toRightOf="@id/iv_search_head"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_search_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name"
                    android:textSize="24dp"
                    android:typeface="monospace"
                    android:textColor="#000"/>

                <ImageView
                    android:id="@+id/iv_search_gender"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/male" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moim_id"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/tv_search_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
